[gd_scene load_steps=4 format=3 uid="uid://djiyrnncqjost"]

[ext_resource type="Script" path="res://inventory/ui/slot_ui.gd" id="1_a531u"]
[ext_resource type="FontFile" uid="uid://svtw3sprfuvn" path="res://font/Pixeled.ttf" id="2_cgp6q"]

[sub_resource type="LabelSettings" id="LabelSettings_p7ch4"]
font = ExtResource("2_cgp6q")
font_size = 10
outline_size = 1
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[node name="Slot" type="Panel"]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_a531u")

[node name="MarginContainer" type="MarginContainer" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
texture_filter = 1
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="."]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -36.0
offset_bottom = 45.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "10"
label_settings = SubResource("LabelSettings_p7ch4")
horizontal_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
